@startuml

package Master {
    object MainMaster {
        WorkerInfos workerInfos
    }

    folder "Managers" {
        class ShuffleManager {
            + executeRounds(allRounds)
            + executeRound(roundId)
        }
    }

    folder "Services" {
        class ShuffleWorkerService {
            + broadcastNextRound(newRound: Int)
            + broadcastDeadWorker(workerId: Int)

            - onWorkerRoundDone(workerId: Int)
            - onWorkerDead(workerId: Int)
        }
    }
    
    folder "Repositories" {
        class GrpcShuffleRepository {
            Map<Int, StreamObserver> streamObservers

            + sendNextRound(workerId: Int, round: Int)
            + sendDeadWorker(workerId: Int, round: Int)
            + onWorkerRoundDoneHandler(handler)
            + onWorkerDeadHandler(handler)

            - openServer()
            - close()
        }
    }
    
    folder Model {
        object GrpcShuffleStream <<Proto>>
    }

    ' Relationships
    MainMaster --> Managers
    Managers --> Services
    Services --> Repositories
    Repositories --> Model

}


@enduml